Shuffle seeds button

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,10 @@
     <section id="intro" class="hidden">
       <h1>WestSide</h1>
       <p>Pick a seed word</p>
-      <div id="seeds"></div>
+      <div id="seed_list">
+        <div id="seeds"></div>
+        <button id="more">Shuffle</button>
+      </div>
     </section>
     <section id="rap" class="hidden">
       <div id="verses"></div>
