Add some nicer styling

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>
-      WestSide
+      Frosty
     </title>
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
@@ -11,11 +11,11 @@
       Loading
     </section>
     <section id="intro" class="hidden">
-      <h1>WestSide</h1>
+      <h1>Frosty</h1>
       <p>Pick a seed word</p>
       <div id="seed_list">
         <div id="seeds"></div>
-        <button id="more">Shuffle</button>
+        <button id="more" class="inverted">Shuffle</button>
       </div>
     </section>
     <section id="rap" class="hidden">
