Add checkbox to UI to specify if text should be seussified

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,9 @@
     <section id="intro" class="hidden">
       <h1>Frosty</h1>
       <p>Pick a seed word</p>
+      <form>
+        <input type="checkbox" id="seussify"> Seussify
+      </form>
       <div id="seed_list">
         <div id="seeds"></div>
         <button id="more" class="inverted">Shuffle</button>
