Audio player on frontend

--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,10 @@
     <section id="rap" class="hidden">
       <div id="verses"></div>
       <button id="another">Another one</button>
+      <audio id="listen" controls="controls">
+        Your browser does not support the audio element. :(
+        <source id="source" type="audio/wav" />
+      </audio>
     </section>
 
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
