Play poem (works in chrome but not safari)

--- a/public/index.html
+++ b/public/index.html
@@ -23,11 +23,10 @@
     </section>
     <section id="rap" class="hidden">
       <div id="verses"></div>
-      <button id="another">Another one</button>
-      <audio id="listen" controls="controls">
-        Your browser does not support the audio element. :(
-        <source id="source" type="audio/wav" />
-      </audio>
+      <div id="actions">
+        <button id="another">Another one</button>
+        <button id="listen">Listen</button>
+      </div>
     </section>
 
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
