--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,6 @@
     </section>
 
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="westside.js"></script>
+    <script src="calInTheHacks.js"></script>
   </body>
 </html>
