--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>
-      Cal In The Hacks
+      The Cal In The Hacks
     </title>
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
@@ -11,7 +11,7 @@
       Loading
     </section>
     <section id="intro" class="hidden">
-      <h1>Cal In The Hacks</h1>
+      <h1>The Cal In The Hacks</h1>
       <p>Pick a seed word</p>
       <form>
         <input type="checkbox" id="seussify"> Seussify
