Turn off Listen button

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
       Loading
     </section>
     <section id="intro" class="hidden">
-      <h1>The Cal In The Hacks</h1>
+      <h1>The Cal in the Hacks</h1>
       <p>Pick a seed word</p>
       <form>
         <input type="checkbox" id="seussify"> Seussify
@@ -25,7 +25,7 @@
       <div id="verses"></div>
       <div id="actions">
         <button id="another">Another one</button>
-        <button id="listen">Listen</button>
+        <!--<button id="listen">Listen</button>-->
       </div>
     </section>
 
